# item-generator

./: lambda_function.py  pyproject.toml  test.html
.github/: zip_dependencies.sh
.github/workflows/: lambda.yaml
alembic/: env.py
alembic/versions/: 66de2ed44ee1_first_migration.py
item_generator/: db_operations.py  db_session.py  items.py  lambda_function.py  models.py
